deploy react app to github pages with https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sidsharma3.github.io/Shoppies",
+  "homepage": "https://sidsharma3.github.io/Shoppies",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
